--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lektion 3</title>
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
-</head>
-
-<body>
-    <div id="smallPokeDex"></div>
+  </head>
+  <body>
     <button id="drawCard">Dra kort</button>
-</body>
-
+    <button id="lower"><< Lägre</button>
+    <button id="higher">Högre >></button>
+    <div id="smallPokeDex">
+        <h2></h2>
+        <img src="" alt="">
+    </div>
+  </body>
 </html>
