--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lektion 3</title>
+    <title>Card Game</title>
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
   </head>
@@ -12,9 +12,9 @@
     <button id="drawCard">Dra kort</button>
     <button id="lower"><< Lägre</button>
     <button id="higher">Högre >></button>
-    <div id="smallPokeDex">
+    <div id="Card">
         <h2></h2>
-        <img src="" alt="">
+        <img id="image" src="" alt=""/>
     </div>
   </body>
 </html>
