--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button class="button" id="lower"> Lägre</button>
     <div id="Card">
       <h2></h2>
-      <img id="image" src="" alt=""/>
+      <img id="image" src="https://images.unsplash.com/photo-1604345250885-11f528eec3ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1219&q=80" alt=""/>
     </div>
     <p id="message"></p>
 </div>
