--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card Game</title>
+
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
+
 </head>
 <body>
+
 <div id="getCard" class="flex-column">
     <button class="button1" id="start">Starta spelet </button>
-    <h2>Välkommen till HiLo. Ett roligt gissningsspel! </h2>
+    <h2>Välkommen till High & Low. Ett roligt gissningsspel! </h2>
     <img class="card" src="" alt="">
     
     <h2>Gissa om nästa kort är högre eller lägre </h2>
@@ -29,3 +32,4 @@
     
 </body>
 </html>
+
